services/educs/frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: educs-frontend
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  template:
    spec:
      imagePullSecrets:
      - name: docker-auth
      containers:
      - name: educs-frontend
        image: ghcr.io/cguertin14/educs-frontend
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
        resources:
          limits:
            memory: "256Mi"
            cpu: "250m"
          requests:
            memory: "128Mi"
            cpu: "125m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
